--- a/app/src/main/res/layout/fragment_d.xml
+++ b/app/src/main/res/layout/fragment_d.xml
@@ -17,7 +17,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/white">
 
                 <ImageView
@@ -29,6 +29,14 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="35dp"
                     android:src="@drawable/ic_loading_empty" />
+
+                <TextView
+                    android:id="@+id/account_tv_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:padding="20dp"
+                    android:text="更多" />
 
             </RelativeLayout>
 
