--- a/app/src/main/res/layout/activity_selectpicture.xml
+++ b/app/src/main/res/layout/activity_selectpicture.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".base.selectpic.BaseSelectPicActivity">
+    tools:context=".business.selectpic.BaseSelectPicActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/select_toolbar"
