--- a/app/src/main/res/layout/activity_ndk.xml
+++ b/app/src/main/res/layout/activity_ndk.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_ndk"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.xiezhenqi.business.more.ndk.NDKActivity">
+
+    <include layout="@layout/merge_toolbar" />
 
     <TextView
         android:id="@android:id/text1"
@@ -18,4 +16,4 @@
         android:textSize="33sp"
         tools:text="显示内容" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
