--- a/app/src/main/res/layout/fragment_d.xml
+++ b/app/src/main/res/layout/fragment_d.xml
@@ -30,32 +30,22 @@
 
             <TextView
                 android:id="@+id/account_tv_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/account_siv_head"
                 android:layout_toRightOf="@+id/account_siv_head"
+                android:drawableEnd="@drawable/ic_common_into"
+                android:drawableRight="@drawable/ic_common_into"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingEnd="26dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="26dp"
+                android:paddingStart="10dp"
                 android:text="不是九天"
                 android:textColor="#ff333333"
                 android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:drawableEnd="@drawable/ic_common_into"
-                android:drawablePadding="5dp"
-                android:drawableRight="@drawable/ic_common_into"
-                android:gravity="center"
-                android:paddingEnd="20dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="20dp"
-                android:paddingStart="5dp"
-                android:textSize="16sp" />
 
         </RelativeLayout>
 
@@ -129,6 +119,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="6dp"
                 android:paddingStart="5dp"
+                android:text="11"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -189,6 +180,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="6dp"
                 android:paddingStart="5dp"
+                android:text="8"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -250,6 +242,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="6dp"
                 android:paddingStart="5dp"
+                android:text="11"
                 android:textSize="16sp" />
         </LinearLayout>
 
