--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -10,24 +10,24 @@
     <com.xiezhenqi.widget.progressbar.NumberProgressBar
         android:id="@+id/progress1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-
-
-    <com.xiezhenqi.widget.progressbar.NumberProgressBar2
-        android:id="@+id/progress2"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:background="@color/themeColor"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
+        android:background="@color/white"
         android:visibility="visible"
-        app:npb_textVisibility="visible" />
+        app:npb_drawUnreachedBar="true"
+        app:npb_orientation="horizontal"
+        app:npb_reachedThickness="3dp"
+        app:npb_textPaddingEnd="0dp"
+        app:npb_textPaddingStart="0dp"
+        app:npb_textSize="10sp"
+        app:npb_unreachedThickness="3dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
         android:onClick="onButtonClick"
         android:text="开始" />
