--- a/app/src/main/res/layout/activity_h5help.xml
+++ b/app/src/main/res/layout/activity_h5help.xml
@@ -75,6 +75,7 @@
             app:npb_textPaddingEnd="5dp"
             app:npb_textPaddingStart="5dp"
             app:npb_textSize="10sp"
+            app:npb_textStyle="bold_italic"
             app:npb_unreachedColor="@color/progress_unreached_color"
             app:npb_unreachedThickness="4dp" />
 
