进度条更新

--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -19,8 +19,7 @@
     <com.xiezhenqi.widget.progressbar.NumberProgressBar
         android:id="@+id/progress1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/text"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -29,7 +28,7 @@
         app:npb_drawDirection="up"
         app:npb_drawText="true"
         app:npb_drawUnreachedBar="true"
-        app:npb_orientation="vertical"
+        app:npb_orientation="horizontal"
         app:npb_reachedColor="@color/themeColor"
         app:npb_reachedThickness="4dp"
         app:npb_textColor="@color/themeColor"
@@ -39,13 +38,5 @@
         app:npb_textStyle="bold_italic"
         app:npb_unreachedColor="@color/lineColor_toolbar"
         app:npb_unreachedThickness="4dp" />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:text="指数" />
 
 </RelativeLayout>
