--- a/app/src/main/res/layout/activity_h5help.xml
+++ b/app/src/main/res/layout/activity_h5help.xml
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
-        android:background="@drawable/bg_toolbar_normal">
+        android:background="@color/themeColor">
 
         <ImageButton
             android:id="@+id/h5help_ibtn_back"
@@ -21,7 +21,8 @@
             android:background="@drawable/bg_common_press_nomask"
             android:padding="12dp"
             android:src="@drawable/ic_evevnt_left"
-            android:tint="@color/white" />
+            android:tint="@color/white"
+            tools:ignore="ContentDescription" />
 
         <ImageButton
             android:id="@+id/h5help_ibtn_close"
@@ -33,7 +34,9 @@
             android:padding="12dp"
             android:src="@drawable/ic_event_close"
             android:tint="@color/white"
-            android:visibility="invisible" />
+            android:visibility="gone"
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/h5help_tv_title"
@@ -41,13 +44,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="70dp"
-            android:layout_marginRight="70dp"
             android:layout_toEndOf="@+id/h5help_ibtn_close"
             android:layout_toRightOf="@+id/h5help_ibtn_close"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/white" />
+            android:gravity="center|start"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/white"
+            tools:text="标题" />
 
     </RelativeLayout>
 
@@ -67,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:npb_drawText="true"
-            app:npb_drawUnreachedBar="true"
+            app:npb_drawUnreachedBar="false"
             app:npb_orientation="horizontal"
             app:npb_reachedColor="@color/progress_reached_color"
             app:npb_reachedThickness="4dp"
