--- a/app/src/main/res/layout/custom_tab_margin.xml
+++ b/app/src/main/res/layout/custom_tab_margin.xml
@@ -8,7 +8,7 @@
     android:background="?attr/selectableItemBackground"
     android:gravity="center"
     android:textAllCaps="true"
-    android:textColor="@drawable/custom_tab"
+    android:textColor="@color/tc_custom_tab"
     android:textSize="14sp"
     android:textStyle="bold">
 
