--- a/app/src/main/res/layout/activity_lazy_loading.xml
+++ b/app/src/main/res/layout/activity_lazy_loading.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_ndk"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xiezhenqi.business.more.ndk.NDKActivity">
+    tools:context="com.xiezhenqi.business.more.ndk.LazyLoadingActivity">
 
     <include layout="@layout/merge_toolbar" />
 
