--- a/app/src/main/res/layout/item_custom_tab_view.xml
+++ b/app/src/main/res/layout/item_custom_tab_view.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
-        android:textStyle="bold"
         android:id="@+id/tv_tab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:textColor="@color/tc_custom_tab2"
-        android:textSize="15sp"
+        android:textSize="14sp"
+        android:textStyle="bold"
         tools:text="首页" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_toEndOf="@+id/tv_tab"
         android:layout_toRightOf="@+id/tv_tab"
         android:textColor="@color/tc_custom_tab2"
-        android:textSize="12sp"
+        android:textSize="11sp"
         android:textStyle="bold"
         tools:text="15" />
 
