--- a/app/src/main/res/color/tc_custom_tab.xml
+++ b/app/src/main/res/color/tc_custom_tab.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/themeColor" android:state_selected="true" />
 
-    <item android:color="@color/lineColor_toolbar" android:state_selected="false" />
+    <item android:color="@color/lineColor_toolbar"  />
 </selector>
