--- a/app/src/main/res/layout/activity_id.xml
+++ b/app/src/main/res/layout/activity_id.xml
@@ -117,7 +117,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.xiezhenqi.widget.MyNestedScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -136,6 +136,6 @@
                 android:layout_marginTop="10dp" />
         </LinearLayout>
 
-    </com.xiezhenqi.widget.MyNestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
