--- a/app/src/main/res/layout/fragment_star.xml
+++ b/app/src/main/res/layout/fragment_star.xml
@@ -1,13 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.xiezhenqi.widget.WrapContentHeightViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/vp_star"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xiezhenqi.business.more.mazing.fragments.StarFragment">
+    tools:context="com.xiezhenqi.business.home.fragments.CFragment" />
 
-    <com.xiezhenqi.widget.WrapContentHeightViewPager
-        android:id="@+id/vp_star"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp" />
-
-</FrameLayout>
