--- a/app/src/main/res/layout/fragment_star.xml
+++ b/app/src/main/res/layout/fragment_star.xml
@@ -1,4 +1,4 @@
-<com.xiezhenqi.widget.WrapContentHeightViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vp_star"
     android:layout_width="match_parent"
