--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,7 @@
 <resources>
 
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="EditTextStyleNoCursorDrawable" parent="Widget.AppCompat.EditText" />
 
     <style name="ToobarTitle">
